manifests/old-pingpong-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
  # namespace: app-exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: kylmps/pingpong:5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests: 
              cpu: "100m"
              memory: "50Mi" 
            limits:
              cpu: "150m"
              memory: "100Mi"
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: pingpong-svc
#   namespace: app-exercises
# spec:
#   type: ClusterIP
#   selector:
#     app: pingpong # Ensure this matches the `app` label in your Deployment
#   ports:
#     - port: 3001 # Cluster-wide port the Service exposes
#       protocol: TCP
#       targetPort: 3001 # Correct the targetPort to match your Koa app
