manifests/old-pingpong-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  # namespace: app-exercises
spec:
  type: ClusterIP
  selector:
    app: pingpong # Ensure this matches the `app` label in your Deployment
  ports:
    - port: 3001 # Cluster-wide port the Service exposes
      protocol: TCP
      targetPort: 3001 # Correct the targetPort to match your Koa app
#for GKE na
# apiVersion: v1
# kind: Service
# metadata:
#   name: pingpong-svc
#   # namespace: app-exercises
# spec:
#   type: LoadBalancer  # Change from ClusterIP to LoadBalancer
#   selector:
#     app: pingpong
#   ports:
#     - port: 3001
#       protocol: TCP
#       targetPort: 3001
