manifests/old-pingpong-manifests/svc-ing.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-ing
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 3001

### dont apply
